cluster/apps/monitoring/vpn-server/node-exporter/networkpolicies/prometheus-egress-tools-server-node-exporter.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: prometheus-egress-vpn-server-node-exporter
  namespace: monitoring
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: kube-prometheus-stack-prometheus
      app.kubernetes.io/name: prometheus
  egress:
    - toFQDNs:
        - matchName: vpn.srv.${BASE_DOMAIN}
      toPorts:
        - ports:
            - port: "9100" # prometheus node exporter
              protocol: TCP
